--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -3,33 +3,24 @@
 {% load static%}
 {% block body%}
 
-<section id="hero" class="hero section dark-background">
-  <img src="{% static 'assets/img/profile.jpg' %}" alt="Profile Picture" data-aos="fade-in" class="">
-
-  <div class="hero">
-    <div class="container" data-aos="fade-up" data-aos-delay="100%"
-      style="position: left; z-index: 2; text-align: left; display: flex; flex-direction: column; justify-content: flex-start;">
-
-      <h2 style="margin: 0; font-size: 50px; font-weight: 500; text-align: left;">
-        нєу! му ηαмє
-        <span style="color: #ec0c10;">𝒜𝓃𝓀𝒾𝓉 𝓀𝓊𝓂𝒶𝓇</span>
-        ⋆
-      </h2>
-      <p style="margin: 10px 0 0 0; font-size: 40px; text-align: left; color: hwb(0 93% 5%);">
-        I'm
-        <span class="typed" data-typed-items="Web Developer,Python developer,Full Stack Developer"
-          style="letter-spacing: 1px; border-bottom: 2px solid var(--accent-color); color: hsl(181, 100%, 57%);">
-          Designer
-        </span>
-        <span class="typed-cursor typed-cursor--blink" aria-hidden="true" style="color: #e9e4e3;"></span>
-      </p>
-
-    </div>
-  </div>
-
-
-</section><!-- /Hero Section -->
-{% for message in messages%}
+<section class="home active section" id="home">
+                <div class="container">
+                    <div class="row">
+                        <div class="home-info padd-15">
+                            <h3 class="hello">Hello, My name is <span class="name">Ankit Kumar</span></h3>
+                            <h3 class="my-profession">I'm a <span class="typing">""</span></h3>
+                            <p>I'm a fresh graduate super excited about web development, both the front and back ends. I'm all about diving into cool web framework like django and restAPI,Now,
+                                i am Proficient in Html ,Css ,JavaScript ,ReactJS ,BootStrap and python/django.
+                            </p>
+                            <a href="#" class="btn">Download CV</a>
+                        </div>
+                        <div class="home-img padd-15">
+                            <img src="{% static 'img/profile1.jpg' %}" alt="Profile Image">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Home section End -->{% for message in messages%}
 <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
   <strong>
     {{message}}
